
apply plugin: 'java'

sourceCompatibility = 12

repositories {
    mavenCentral()
}

dependencies {
    implementation 'junit:junit:4.12'
    implementation 'org.hamcrest:hamcrest-core:1.3'
    implementation 'org.hamcrest:hamcrest-library:1.3'
    implementation 'org.apache.commons:commons-math3:3.6'
    implementation 'org.jfree:jfreechart:1.0.19'
    implementation 'org.jsoup:jsoup:1.8.3'
    implementation 'redis.clients:jedis:2.8.0'
}
